fix unwanted scrollbars for chromium

--- a/src/generic_ui/styles/main.sass
+++ b/src/generic_ui/styles/main.sass
@@ -916,6 +916,7 @@ img.c-icon
 #popup
   width: 370.8204px
   height: 600px
+  overflow: hidden
   .footer
     text-align: right
 
